--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,27 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
+    android:gravity="center"
+    android:background="@color/background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pg.gda.org.robotcontroller.MainActivity">
+    tools:context="pg.gda.org.robotcontroller.MainActivity"
+    android:orientation="vertical">
 
-    <WebView
-        android:id="@+id/web_view"
+
+    <TextView
+        android:text="Camera address"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </WebView>
+        android:layout_height="wrap_content" />
+    <EditText
+        android:text="http://"
+        android:id="@+id/camera_ip"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
-    <io.github.controlwear.virtual.joystick.android.JoystickView
-        android:layout_gravity="bottom|end"
-        xmlns:custom="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/joystick"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        custom:JV_buttonColor="#FF0000"
-        custom:JV_borderColor="#0000FF"
-        custom:JV_backgroundColor="#82103896"
-        custom:JV_borderWidth="4dp"/>
+    <TextView
+        android:text="Chart address"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <EditText
+        android:text="http://"
+        android:id="@+id/chart_ip"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
+    <TextView
+        android:text="Websocket connection"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <EditText
+        android:text="ws://"
+        android:id="@+id/websocket_ip"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
-</FrameLayout>
+    <Button
+        android:backgroundTint="@color/green"
+        android:text="START"
+        android:id="@+id/start"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+</LinearLayout>
